--- a/style.css
+++ b/style.css
@@ -38,11 +38,11 @@ body * {
 
 /*Criando um container para colocar todos os itens dentro*/
 #container {
-  width: auto;
+  width: 100%;
+  max-width: 588px;
   margin: auto;
   margin-top: 36px;
   padding: 0px 24px;
-  max-width: 800px;
   /*border: 1px solid white;*/
 }
 
